--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,7 +13,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by Varun Kaushik.It uses data from weather stack api and position stack api.</p>
-        <img class="portrait" src="/img/me.png" alt="">
+        <img class="portrait" src="/img/me.jpg" alt="">
     </div>
     {{>footer}}
 </body>
